--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stephen</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/5459395b46.js" crossorigin="anonymous"></script>
     </head>
 <body>
   <section id="about-me">
     <nav>
-    <div class="personal__logo">Stephen I.</div>
+    <div class="personal__logo">Stephen I. </div>
     <ul class="nav__link--list">
        <li>
             <a href="" class="
@@ -40,15 +41,66 @@
             <img src="./assets/profile pic.JPG" class="about-me__picture" alt="picture of me!">
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text-purple">Stephen I.</span>
+              Hey! I'm <span class="text--purple">Stephen I.</span>
             </h1>
             <p class="about-me__info--para">
                 I'm currently enrolled in <strong class="text--purple">Frontend</strong> to become a software developer to focus on website creation and modification. 
             </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="" class="about-me__link">
+                  <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="" class="about-me__link">
+                  <i class="fa-solid fa-envelope"></i>
+                  </a>
+                  <a href="" class="about-me__link">
+                    <i class="fa-regular fa-file"></i>
+                    </a>
+            </div>
         </div>
+        <figure class="about-me__img--container">
+          <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+        </figure>
     </div>
   </div>
   </section>
+  <section id="Languages">
+     <div class="container">
+      <div class="row">
+<h1 class="section__title">This is my technology stack</h1>
+<div class="language__list">
+  <div class="language">
+    <figure class="language__img--wrapper">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/013/313/458/small_2x/html-icon-3d-rendering-illustration-free-vector.jpg">
+     </figure>
+  </div>
+  <div class="language">
+    <figure class="language__img--wrapper">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/013/313/458/small_2x/html-icon-3d-rendering-illustration-free-vector.jpg">
+     </figure>
+  </div>
+  <div class="language">
+    <figure class="language__img--wrapper">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/013/313/458/small_2x/html-icon-3d-rendering-illustration-free-vector.jpg">
+     </figure>
+  </div>
+  <div class="language">
+    <figure class="language__img--wrapper">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/013/313/458/small_2x/html-icon-3d-rendering-illustration-free-vector.jpg">
+     </figure>
+  </div>
+  <div class="language">
+    <figure class="language__img--wrapper">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/013/313/458/small_2x/html-icon-3d-rendering-illustration-free-vector.jpg">
+     </figure>
+  </div>
+  </div>
+      </div>
+     </div>
+  </section>
 </body>
 
-</html>
+</html> 
